<resources>
    <string name="app_name">Meus Favoritos</string>
    <string name="maps_key">AIzaSyDZAuDI0Zvu5Zsl54Fz0eYKf4g9cI4gmek</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="running">Running...</string>
    <string name="location_tracking">Location Tracking</string>
    <string name="close">close</string>
    <string name="search">Buscar</string>
    <string name="search_list_fragment" translatable="false">searchListFragment</string>
    <string name="touch_for_favorite_it">Toque para favoritar</string>
    <string name="lat">Lat:</string>
    <string name="lng">Lng:</string>
    <string name="date">Date</string>
    <string name="name">Nome:</string>
    <string name="remove_favorite">Remover Favorito</string>
    <string name="are_you_sure_you_want_remove_">Deseja excluir este item?</string>
    <string name="set_name">Informe um nome</string>
</resources>
